java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testAddCastHint7.pass
package org.netbeans.test.java.hints;

/**
 * @author leon
 */
public class AddCast7 {
    
    public AddCast7() {
    }
    
    public String getString(Object o) {
        return (String) o;
    }
    
}
